--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,21 +31,21 @@
                         <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa  fa-stack-1x fa-inverse">知</i>
+                                <i class="fa  fa-stack-1x fa-inverse">知乎</i>
                             </span>
                         </a>
                     </li>
                     {% endif %}
-
+                    {% if site.weibo_username %}
                     <li>
-                        <a target="_blank" href="http://weibo.com/u/5041353877">
+                        <a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-weibo fa-stack-1x fa-inverse">微博</i>
                             </span>
                         </a>
                     </li>
-
+                    {% endif %}
 
 
                     {% if site.facebook_username %}
@@ -53,7 +53,7 @@
                         <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-facebook fa-stack-1x fa-inverse">facebook</i>
                             </span>
                         </a>
                     </li>
@@ -63,7 +63,7 @@
                         <a target="_blank" href="https://github.com/{{ site.github_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse">github</i>
                             </span>
                         </a>
                     </li>
