--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,7 +53,7 @@
                         <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-facebook fa-stack-1x fa-inverse">facebook</i>
+                                <i class="fa fa-facebook fa-stack-1x fa-inverse">Facebook</i>
                             </span>
                         </a>
                     </li>
@@ -63,7 +63,7 @@
                         <a target="_blank" href="https://github.com/{{ site.github_username }}">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-github fa-stack-1x fa-inverse">github</i>
+                                <i class="fa fa-github fa-stack-1x fa-inverse">Github</i>
                             </span>
                         </a>
                     </li>
